[project]
name = "memory-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.setuptools]
packages=["memory"]
package-dir={"" = "."}
