[project]
name = "memory-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.21.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.setuptools]
packages=["memory", "tcm"]
package-dir={"" = "."}

[tool.ruff.per-file_ignores]
"memory/*.py"=["F722"]

[tool.ruff]
exclude = [
    "memory/*.py"
]
